@@ -1,6 +1,6 @@
 pkgbase = xen
 	pkgdesc = Open-source type-1 or baremetal hypervisor - stable branch
-	pkgver = 4.17.0
+	pkgver = 4.17.2pre
 	pkgrel = 1
 	url = https://xenproject.org/
 	arch = x86_64
@@ -38,8 +38,6 @@ pkgbase = xen
 	makedepends = gettext
 	makedepends = flex
 	makedepends = pixman
-	makedepends = ocaml
-	makedepends = ocaml-findlib
 	makedepends = fig2dev
 	optdepends = xen-qemu: needed for PV and HVM domUs
 	optdepends = xen-pvhgrub: bootloader for PVH domains
