@@ -1,3 +1,6 @@
+2023-07-11 Sam Mulvey
+	* Removed OCaml bindings
+
 2022-12-14 Sam Mulvey
 	* 4.17.0-1
 
